feat: round-robin changelog across all missed versions
Previously the version checker only showed changelog entries from the
latest version. Players who skipped multiple versions (e.g. 2.1 -> 2.7)
missed important changes from intermediate releases.

Now collects changelogs from all versions newer than the client's,
round-robins by importance (first entry from each version, then second,
etc.) to fill the configured line count.

Also: atomic Snapshot record for thread safety, records for data types,
immutable changelog lists, CLAUDE.md updates for new files.